# pianod-sc

./: .gitignore  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  pianod-sc.cbp  pianod_unittest
Documentation/: football.md  launching.md  title.md
contrib/: Makefile.am  Makefile.in  README.init  README.service  com.deviousfish.pianod.plist  create-pianod-tls-cert  get-pianod-config  jukebox  piano  pianod-fix-tls-fingerprint  pianod.conf  pianod.env  pianod.raspbian.init  pianod.service  pianostatuser.sh  runmix  startscript-example
man/: Makefile.am  Makefile.in  piano.1  pianod.1  runmix.1
src/: Makefile.am  Makefile.in  command.c  command.h  event.c  event.h  id3tags.c  lamercipher.c  logging.c  logging.h  pianod.c  pianod.h  pianoextra.c  pianoextra.h  pink_silence.h  player.c  player.h  query.c  query.h  response.c  response.h  seeds.c  seeds.h  settings.c  settings.h  shoutcast.c  shoutcast.h  support.c  support.h  threadqueue.c  tuner.c  tuner.h  users.c  users.h
src/include/: Makefile.am  Makefile.in
src/libezxml/: Makefile.am  Makefile.in  ezxml.c
src/libfootball/: Makefile.am  Makefile.in  fb_event.c  fb_http.c  fb_message.c  fb_parser.c  fb_public.h  fb_service.c  fb_service.h  fb_socketmgr.c  fb_utility.c  fgetln.c  fgetln.h
src/libpiano/: Makefile.am  Makefile.in  piano.c  piano.h  piano_private.h  request.c  response.c
src/libwaitress/: Makefile.am  Makefile.in  waitress.c  waitress.h
