## Process this file with automake to produce Makefile.in

SUBDIRS		= src man contrib

EXTRA_DIST      = pianod_unittest \
		  Documentation/commands.md \
		  Documentation/launching.md \
		  Documentation/protocol.md \
		  Documentation/title.md \
		  Documentation/football.md

TESTS		= pianod_unittest

