## Process this file with automake to produce Makefile.in

EXTRA_DIST      = piano \
		  runmix \
		  create-pianod-tls-cert \
		  com.deviousfish.pianod.plist \
		  jukebox \
		  pianod-fix-tls-fingerprint \
		  README.init \
		  pianod.raspbian.init \
		  README.service \
		  pianod.service \
		  pianod.env \
		  pianod.conf \
		  pianostatuser.sh \
		  startscript-example \
		  get-pianod-config

bin_SCRIPTS	= piano \
		  runmix
